2017-06-08  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling
	for early expansion of vec_eqv.

2017-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/81005
	* ubsan.c (instrument_null): Avoid pointless code temporary.
	(pass_ubsan::execute): Instrument aggregate arguments of calls.

2017-06-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81015
	Revert:
	2016-12-14  Uros Bizjak  <ubizjak@gmail.com>

	PR target/59874
	* config/i386/i386.md (*ctzhi2): New insn_and_split pattern.
	(*clzhi2): Ditto.

2017-06-08  Jan Hubicka  <hubicka@ucw.cz>

	* predict.c (unlikely_executed_edge_p): Move ahead.
	(probably_never_executed_edge_p): Use it.

2017-06-08  Alexander Ivchenko  <alexander.ivchenko@intel.com>

	PR middle-end/79988
	* tree-chkp.c (chkp_gimple_call_builtin_p): Remove
	gimple_call_builtin_p call.

2017-06-08  Jan Hubicka  <hubicka@ucw.cz>

	* system.h (fancy_abort): Annotate by ATTRIBUTE_COLD.
	* rtl.h (rtl_check_failed_bounds, rtl_check_failed_type1,
	rtl_check_failed_type2, rtl_check_failed_code1,
	rtl_check_failed_code2, rtl_check_failed_code_mode,
	rtl_check_failed_block_symbol, cwi_check_failed_bounds,
	rtvec_check_failed_bounds, rtl_check_failed_flag,
	_fatal_insn_not_found, _fatal_insn): Likewise.
	* tree.h (tree_contains_struct_check_failed,
	tree_check_failed, tree_not_check_failed,
	tree_class_check_failed, tree_range_check_failed,
	tree_not_class_check_failed, tree_int_cst_elt_check_failed,
	tree_vec_elt_check_failed, phi_node_elt_check_failed,
	tree_operand_check_failed, omp_clause_check_failed,
	omp_clause_operand_check_failed, omp_clause_range_check_failed):
	Likewise.

2017-06-08  Jan Hubicka  <hubicka@ucw.cz>

	* cgraph.c (cgraph_edge::maybe_hot_p): Do not check
	flag_branch_probabilities.
	* ipa-inline.c (edge_badness): Likewise.
	* ipa-profile.c (ipa_propagate_frequency_1): Likewise.
	* postreload-gcse.c (eliminate_partially_redundant_load): Likewise.