@@ -1629,6 +1629,17 @@
 		  || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (<MODE>mode));
 
+      /* Adding a constant to r0 is not a valid insn, so use a different
+	 strategy in that case.  */
+      if (REGNO (operands[1]) == 0 || REGNO (tmp) == 0)
+	{
+	  if (operands[0] == operands[1])
+	    FAIL;
+	  rs6000_emit_move (operands[0], operands[2], <MODE>mode);
+	  emit_insn (gen_add<mode>3 (operands[0], operands[1], operands[0]));
+	  DONE;
+	}
+
       HOST_WIDE_INT val = INTVAL (operands[2]);
       HOST_WIDE_INT low = ((val & 0xffff) ^ 0x8000) - 0x8000;
       HOST_WIDE_INT rest = trunc_int_for_mode (val - low, <MODE>mode);
